[gd_scene load_steps=25 format=1]

[ext_resource path="res://shop.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://art/gui/glassPanel_cornerBR.png" type="Texture" id=3]
[ext_resource path="res://art/sheet.pill_yellow.atex" type="Texture" id=4]
[ext_resource path="res://fonts/KenVector Future.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/gui/glassPanel_tab.png" type="Texture" id=6]
[ext_resource path="res://art/gui/glassPanel_corners.png" type="Texture" id=7]
[ext_resource path="res://art/gui/glassPanel_cornerTL.png" type="Texture" id=8]
[ext_resource path="res://art/gui/square_shadow.png" type="Texture" id=9]
[ext_resource path="res://art/gui/crossair_blueOutline.png" type="Texture" id=10]
[ext_resource path="res://audio/sfx_sounds_Blip10.wav" type="Sample" id=11]
[ext_resource path="res://audio/sfx_sounds_fanfare1.wav" type="Sample" id=12]

[sub_resource type="DynamicFont" id=1]

font/size = 45
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=5]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="DynamicFont" id=10]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]

font/size = 42
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="SampleLibrary" id=12]

samples/sfx_sounds_Blip10 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 11 ) }
samples/up = { "db":0.0, "pitch":1.0, "sample":ExtResource( 12 ) }

[node name="shop" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )
__meta__ = { "_edit_lock_":true }

[node name="background" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1026.0
margin/bottom = 769.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = { "_edit_lock_":true }

[node name="cash_frame" type="Patch9Frame" parent="."]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 716.0
margin/top = 15.0
margin/right = 1010.0
margin/bottom = 93.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="TextureFrame 3" type="TextureFrame" parent="cash_frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 65.0
margin/bottom = 65.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="cash" type="Label" parent="cash_frame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="title_frame" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 13.0
margin/top = 11.0
margin/right = 693.0
margin/bottom = 679.0
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 100, 113 )
patch_margin/left = 14
patch_margin/top = 17
patch_margin/right = 36
patch_margin/bottom = 11
__meta__ = { "_edit_group_":true }

[node name="title" type="Label" parent="title_frame"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 1 )
text = "UPGRADES"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="guns_button" type="Patch9Frame" parent="."]

editor/display_folded = true
rect/min_size = Vector2( 130, 70 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 169.0
margin/right = 671.0
margin/bottom = 239.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="pill" type="TextureFrame" parent="guns_button"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="button" type="Button" parent="guns_button"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 95.0
margin/bottom = 15.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "35"
flat = true

[node name="fire_rate_button" type="Patch9Frame" parent="."]

editor/display_folded = true
rect/min_size = Vector2( 130, 70 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 289.0
margin/right = 670.0
margin/bottom = 359.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="pill" type="TextureFrame" parent="fire_rate_button"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="button" type="Button" parent="fire_rate_button"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 95.0
margin/bottom = 15.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 6 )
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "35"
flat = true

[node name="thrust_button" type="Patch9Frame" parent="."]

editor/display_folded = true
rect/min_size = Vector2( 130, 70 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 409.0
margin/right = 670.0
margin/bottom = 479.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="pill" type="TextureFrame" parent="thrust_button"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="button" type="Button" parent="thrust_button"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 95.0
margin/bottom = 15.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 7 )
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "35"
flat = true

[node name="rot_button" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 130, 70 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = -145.0
margin/right = -158.0
margin/bottom = -215.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="pill" type="TextureFrame" parent="rot_button"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="button" type="Button" parent="rot_button"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 95.0
margin/bottom = 15.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "n/a"
flat = true

[node name="shield_regen_button" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
rect/min_size = Vector2( 130, 70 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -28.0
margin/top = -265.0
margin/right = -158.0
margin/bottom = -335.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="pill" type="TextureFrame" parent="shield_regen_button"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="button" type="Button" parent="shield_regen_button"]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 95.0
margin/bottom = 15.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 9 )
custom_fonts/font = SubResource( 5 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "35"
flat = true

[node name="guns" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 608.0
margin/right = 526.0
margin/bottom = 518.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="guns"]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 190.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Gun Level"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="TextureFrame" parent="guns"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 15.0
margin/right = 195.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box2" type="TextureFrame" parent="guns"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box3" type="TextureFrame" parent="guns"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 15.0
margin/right = 75.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box4" type="TextureFrame" parent="guns"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="fire_rate" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 488.0
margin/right = 526.0
margin/bottom = 398.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="fire_rate"]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 190.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Fire Rate"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="TextureFrame" parent="fire_rate"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 15.0
margin/right = 195.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box2" type="TextureFrame" parent="fire_rate"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box3" type="TextureFrame" parent="fire_rate"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 15.0
margin/right = 75.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box4" type="TextureFrame" parent="fire_rate"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="thrust" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 368.0
margin/right = 526.0
margin/bottom = 278.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="thrust"]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 190.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Power"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="TextureFrame" parent="thrust"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 15.0
margin/right = 195.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box2" type="TextureFrame" parent="thrust"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box3" type="TextureFrame" parent="thrust"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 15.0
margin/right = 75.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box4" type="TextureFrame" parent="thrust"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="rot" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 248.0
margin/right = 526.0
margin/bottom = 158.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="rot"]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 190.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Rotation"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="TextureFrame" parent="rot"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 15.0
margin/right = 195.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box2" type="TextureFrame" parent="rot"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box3" type="TextureFrame" parent="rot"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 15.0
margin/right = 75.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box4" type="TextureFrame" parent="rot"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="shield_regen" type="Patch9Frame" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 128.0
margin/right = 526.0
margin/bottom = 38.0
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 100 )
patch_margin/left = 14
patch_margin/top = 15
patch_margin/right = 16
patch_margin/bottom = 16
__meta__ = { "_edit_group_":true }

[node name="Label" type="Label" parent="shield_regen"]

anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 15.0
margin/right = 190.0
margin/bottom = 15.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.745098, 0.745098, 0.745098, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Shield"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box1" type="TextureFrame" parent="shield_regen"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 240.0
margin/top = 15.0
margin/right = 195.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box2" type="TextureFrame" parent="shield_regen"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 180.0
margin/top = 15.0
margin/right = 135.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box3" type="TextureFrame" parent="shield_regen"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 15.0
margin/right = 75.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="box4" type="TextureFrame" parent="shield_regen"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 15.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="done_button" type="Button" parent="."]

anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 760.0
margin/top = 133.0
margin/right = 982.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 11 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Done"
icon = ExtResource( 10 )
flat = false

[node name="sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 12 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


